--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,3 +1,24 @@
+body{
+  background-color: #000;
+  margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI';
+}
 a{
+  text-decoration: none;
+}
+li{
   list-style-type: none;
 }
+.navbar{
+  position: fixed;
+  width: 200px;
+  background-color: rgb(252, 249, 249);
+}
+h3{
+  padding-left: 40px;
+  padding-top: 10px;
+  padding-bottom: 25px;
+  border-bottom: 2px solid grey;
+}
+/*background-color: rgb(238, 235, 235);*/
