--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,12 @@ li {
 
 .navbar {
   position: fixed;
-  width: 220px;
+  width: 235px;
   background-color: #fcf9f9;
 }
 
-h3 {
+h2 {
+  font-size: 23px;
   padding-left: 40px;
   padding-top: 10px;
   padding-bottom: 25px;
@@ -27,8 +28,8 @@ h3 {
 }
 
 li {
-  font-size: 14px;
-  padding: 13px 20px 13px 80px;
+  font-size: 15px;
+  padding: 13px 93px 13px 23px;
 }
 
 ul {
@@ -37,10 +38,20 @@ ul {
 
 .dash {
   margin-left: 20px;
+  margin-top: 27px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  text-align: center;
   width: 77px;
   color: #fff;
   background-color: #ee055e;
   border-bottom: 4px solid #d1cece;
+}
+
+svg {
+  padding-right: 10px;
 }
 
 /*background-color: rgb(238, 235, 235);*/
