--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -10,7 +10,8 @@ a{
 li{
   list-style-type: none;
 }
-.navbar{
+.navbar{ 
+  border-right: 4px solid rgb(197, 195, 195);
   position: fixed;
   width: 235px;
   background-color: rgb(252, 249, 249);
@@ -41,6 +42,23 @@ ul{
   border-bottom: 4px solid rgb(209, 206, 206);
 }
 svg{
-  padding-right: 10px;
+  padding-right: 12px;
 }
-/*background-color: rgb(238, 235, 235);*/
+.user{
+  color: #000;
+  display: flex;
+  padding: 13px 53px 13px 43px;
+}
+@media(min-width:500px){
+  
+}
+@media(min-width:650px){
+  
+}
+@media(min-width:800px){
+  
+}
+@media(min-width:1200px){
+  
+}
+
