--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -11,6 +11,7 @@ li{
   list-style-type: none;
 }
 .navbar{ 
+  overflow: hidden;
   border-right: 4px solid rgb(197, 195, 195);
   position: fixed;
   width: 235px;
