--- a/css/style.css
+++ b/css/style.css
@@ -90,12 +90,14 @@ svg {
 
 .main {
   background-color: #eeebeb;
+  position: relative;
+  left: 238px;
 }
 
-.section {
+section {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr, 1fr;
-      grid-template-rows: 1fr, 1fr;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
 }
 /*# sourceMappingURL=style.css.map */
