--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,5 +1,7 @@
 .main{
   background-color: rgb(238, 235, 235);
-  position: relative;
-  left: 238px;
+  overflow: hidden;
+}
+.main_gb{
+  border: 0;
 }
