--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ li {
 .navbar {
   overflow: hidden;
   border-right: 4px solid #c5c3c3;
-  position: fixed;
   width: 235px;
   background-color: #fcf9f9;
 }
@@ -90,14 +89,17 @@ svg {
 
 .main {
   background-color: #eeebeb;
-  position: relative;
-  left: 238px;
+  overflow: hidden;
+}
+
+.main_gb {
+  border: 0;
 }
 
 section {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: auto;
-      grid-template-columns: auto;
+  -ms-grid-columns: 0fr auto;
+      grid-template-columns: 0fr auto;
 }
 /*# sourceMappingURL=style.css.map */
