--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -11,7 +11,7 @@ li{
   list-style-type: none;
 }
 .navbar{ 
-  overflow: hidden;
+  overflow-x: hidden;
   border-right: 4px solid rgb(197, 195, 195);
   width: 235px;
   background-color: rgb(252, 249, 249);
@@ -49,24 +49,5 @@ svg{
   display: flex;
   padding: 13px 53px 13px 43px;
 }
-@media(min-width:500px){
-  .nav{
-    display: block;
-  }
-}
-@media(min-width:650px){
-  .nav{
-    display: block;
-  }
-}
-@media(min-width:800px){
-  .nav{
-    display: none;
-  }
-}
-@media(min-width:1200px){
-  .nav{
-    display: none;
-  }
-}
+
 
