--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,16 +1,78 @@
+$green: rgb(14, 145, 14);
+$orenge: rgb(226, 149, 5);
+$blue: rgb(37, 37, 148);
+$cherry: rgb(238, 5, 94);
 .main{
   background-color: rgb(238, 235, 235);
   margin-left: 239px;
   overflow: hidden;
   padding: 0 40px;
 }
+.main_used{
+  text-align: end;
+}
 .main_gb{
+  text-align: end;
   border: 0;
+  font-size: 30px;
+  padding: 0 0 10px 0;
+  margin: 0;
 }
 .dash_main{
   font-size: 23px;
-  padding-left: 40px;
+  padding-left: 0;
   padding-top: 10px;
   padding-bottom: 25px;
   border-bottom: 2px solid transparent;
+}
+.main_get{
+  display: flex;
+  padding-bottom: 10px;
+}
+.main p img{
+  padding-right: 8px;
+}
+.main_block{
+  margin-top: 30px;
+  background-color: rgb(252, 249, 249);
+  padding: 18px 25px 0px 25px;
+  box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
+}
+p{
+  margin: 0;
+}
+.square{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  top: 116px;
+  border: 3px solid rgb(209, 206, 206)
+}
+.main_kub{
+  height: 45px;
+}
+.green{
+  background-color: $green;
+}
+.orenge{
+  background-color: $orenge;
+}
+.blue{
+  background-color: $blue;
+}
+.cherry{
+  background-color: $cherry;
+}
+.grafick{
+  width: auto;
+  height: 120px;
+  background-color: $green;
+}
+.main_grafick{
+  padding: 20px;
+  width: auto;
+  height: 92px;
 }
