--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -3,3 +3,13 @@
   grid-template-columns:repeat(4, 1fr);
   gap: 20px;
 }
+.container2{
+  display: grid;
+  grid-template-columns:repeat(3, 1fr);
+  gap: 20px;
+}
+.container3{
+  display: grid;
+  grid-template-columns:repeat(2, 1fr);
+  gap: 20px;
+}
