--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,22 @@ svg {
           box-shadow: 10px 10px 8px -3px #a8a7a7;
 }
 
+.main_block2 {
+  margin-top: 65px;
+  background-color: #fcf9f9;
+  padding: 18px 25px 0px 25px;
+  -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+          box-shadow: 10px 10px 8px -3px #a8a7a7;
+}
+
+.main_block3 {
+  margin-top: 65px;
+  background-color: #fcf9f9;
+  padding: 18px 25px 0px 25px;
+  -webkit-box-shadow: 10px 10px 8px -3px #a8a7a7;
+          box-shadow: 10px 10px 8px -3px #a8a7a7;
+}
+
 p {
   margin: 0;
 }
@@ -156,15 +172,80 @@ p {
 }
 
 .grafick {
+  padding: 20px;
   width: auto;
   height: 120px;
-  background-color: #0e910e;
+  border: 3px solid #d1cece;
+  -webkit-transform: translateY(-38px);
+          transform: translateY(-38px);
 }
 
 .main_grafick {
+  width: 100%;
+  height: 100%;
+}
+
+.main_used2 {
+  font-size: 20px;
+}
+
+.main_get {
+  font-size: 15px;
+}
+
+.grafick_blue {
+  font-size: 22px;
+  color: #fff;
+  background-color: #252594;
   padding: 20px;
-  width: auto;
-  height: 92px;
+  -webkit-transform: translateY(-50px);
+          transform: translateY(-50px);
+  border: 3px solid #d1cece;
+}
+
+.new {
+  padding-top: 10px;
+  font-size: 20px;
+}
+
+.main_used3 {
+  color: #04a877;
+  font-size: 20px;
+  padding-bottom: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.nameid {
+  margin-right: 100px;
+}
+
+.namei {
+  margin-right: 70px;
+}
+
+.main_get3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.id {
+  padding: 0 40px;
+}
+
+.id1 {
+  margin-left: 37px;
+  margin-right: 55px;
 }
 
 .container {
@@ -172,6 +253,22 @@ p {
   display: grid;
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+
+.container2 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.container3 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
   gap: 20px;
 }
 /*# sourceMappingURL=style.css.map */
