--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -38,6 +38,18 @@ $cherry: rgb(238, 5, 94);
   padding: 18px 25px 0px 25px;
   box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
 }
+.main_block2{
+  margin-top: 65px;
+  background-color: rgb(252, 249, 249);
+  padding: 18px 25px 0px 25px;
+  box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
+}
+.main_block3{
+  margin-top: 65px;
+  background-color: rgb(252, 249, 249);
+  padding: 18px 25px 0px 25px;
+  box-shadow: 10px 10px 8px -3px rgb(168, 167, 167);
+}
 p{
   margin: 0;
 }
@@ -49,7 +61,7 @@ p{
   width: 80px;
   height: 80px;
   top: 116px;
-  border: 3px solid rgb(209, 206, 206)
+  border: 3px solid rgb(209, 206, 206);
 }
 .main_kub{
   height: 45px;
@@ -67,12 +79,55 @@ p{
   background-color: $cherry;
 }
 .grafick{
-  width: auto;
-  height: 120px;
-  background-color: $green;
-}
-.main_grafick{
   padding: 20px;
   width: auto;
-  height: 92px;
+  height: 120px;
+  border: 3px solid rgb(209, 206, 206);
+  transform: translateY(-38px);
+}
+.main_grafick{
+  width: 100%;
+  height: 100%;
+}
+.main_used2{
+  font-size: 20px;
+}
+.main_get{
+  font-size: 15px;
+}
+.grafick_blue{
+  font-size: 22px;
+  color:#fff;
+  background-color: $blue;
+  padding: 20px;
+  transform: translateY(-50px);
+  border: 3px solid #d1cece;
+}
+.new{
+  padding-top: 10px;
+  font-size: 20px;
+}
+.main_used3{
+  color:rgb(4, 168, 119);
+  font-size: 20px;
+  padding-bottom: 5px;
+  display: flex;
+  flex-direction: row;
+}
+.nameid{
+  margin-right: 100px;
+}
+.namei{
+  margin-right: 70px;
+}
+.main_get3{
+  display: flex;
+  flex-direction: row;
+}
+.id{
+  padding: 0 40px;
+}
+.id1{
+  margin-left: 37px;
+  margin-right: 55px;
 }
