--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -13,6 +13,51 @@
   grid-template-columns:repeat(2, 1fr);
   gap: 20px;
 }
-.futer{
-  background-color: #eeebeb
+@media(min-width:500px){
+  .container{
+    display: grid;
+    grid-template-columns:repeat(2, 1fr);
+    gap: 20px;
+  }
+  .container3{
+    display: grid;
+    grid-template-columns:repeat(1, 1fr);
+    gap: 20px;
+}
+}
+@media(min-width:650px){
+  .container{
+    display: grid;
+    grid-template-columns:repeat(2, 1fr);
+    gap: 20px;
+  }
+  .container3{
+    display: grid;
+    grid-template-columns:repeat(1, 1fr);
+    gap: 20px;
+}
+}
+@media(min-width:800px){
+  .container{
+    display: grid;
+    grid-template-columns:repeat(2, 1fr);
+    gap: 20px;
+  }
+  .container3{
+    display: grid;
+    grid-template-columns:repeat(1, 1fr);
+    gap: 20px;
+}
+}
+@media(min-width:1440px){
+  .container{
+    display: grid;
+    grid-template-columns:repeat(4, 1fr);
+    gap: 20px;
+  }
+  .container3{
+    display: grid;
+    grid-template-columns:repeat(2, 1fr);
+    gap: 20px;
+}
 }
