--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -13,10 +13,15 @@
   grid-template-columns:repeat(2, 1fr);
   gap: 20px;
 }
-@media(min-width:500px){
+@media(min-width:200px){
   .container{
     display: grid;
-    grid-template-columns:repeat(2, 1fr);
+    grid-template-columns:repeat(1, 1fr);
+    gap: 20px;
+  }
+  .container2{
+    display: grid;
+    grid-template-columns:repeat(1, 1fr);
     gap: 20px;
   }
   .container3{
@@ -28,7 +33,12 @@
 @media(min-width:650px){
   .container{
     display: grid;
-    grid-template-columns:repeat(2, 1fr);
+    grid-template-columns:repeat(1, 1fr);
+    gap: 20px;
+  }
+  .container2{
+    display: grid;
+    grid-template-columns:repeat(1, 1fr);
     gap: 20px;
   }
   .container3{
@@ -43,6 +53,11 @@
     grid-template-columns:repeat(2, 1fr);
     gap: 20px;
   }
+  .container2{
+    display: grid;
+    grid-template-columns:repeat(3, 1fr);
+    gap: 20px;
+  }
   .container3{
     display: grid;
     grid-template-columns:repeat(1, 1fr);
@@ -53,6 +68,11 @@
   .container{
     display: grid;
     grid-template-columns:repeat(4, 1fr);
+    gap: 20px;
+  }
+  .container2{
+    display: grid;
+    grid-template-columns:repeat(3, 1fr);
     gap: 20px;
   }
   .container3{
