--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -54,5 +54,60 @@ svg{
   display: flex;
   padding: 13px 53px 13px 43px;
 }
-
+@media(min-width:200px){
+  .navbar{ 
+    display: none;
+    height: 100%;
+    overflow-x: hidden;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    border-right: 4px solid rgb(197, 195, 195);
+    width: 235px;
+    background-color: rgb(252, 249, 249);
+  }
+}
+@media(min-width:650px){
+  .navbar{ 
+    display: none;
+    height: 100%;
+    overflow-x: hidden;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    border-right: 4px solid rgb(197, 195, 195);
+    width: 235px;
+    background-color: rgb(252, 249, 249);
+  }
+}
+@media(min-width:900px){
+  .navbar{ 
+    display: block;
+    height: 100%;
+    overflow-x: hidden;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    border-right: 4px solid rgb(197, 195, 195);
+    width: 235px;
+    background-color: rgb(252, 249, 249);
+  }
+}
+@media(min-width:1440px){
+.navbar{ 
+  display: block;
+  height: 100%;
+  overflow-x: hidden;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  border-right: 4px solid rgb(197, 195, 195);
+  width: 235px;
+  background-color: rgb(252, 249, 249);
+}
+}
 
